--- a/nlw/style.css
+++ b/nlw/style.css
@@ -1,4 +1,4 @@
-/*====  RESET ============================ */
+//*====  RESET ============================ */
 * {
   margin: 0;
   padding: 0;
@@ -360,6 +360,17 @@ nav.show div.icon-close {
   background: white;
 }
 
+#testimonials .container {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+#testimonials header {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  margin-bottom: 0;
+}
+
 #testimonials blockquote {
   padding: 2rem;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
@@ -374,9 +385,9 @@ nav.show div.icon-close {
 }
 
 #testimonials blockquote p span {
-  font: 700 2rem serif;
+  font: 700 2.5rem serif;
   position: absolute;
-  top: -0.5rem;
+  top: -0.375rem;
   left: -1.875rem;
   color: var(--base-color);
 }
@@ -395,8 +406,45 @@ nav.show div.icon-close {
   margin-right: 0.5rem;
 }
 
-/*swiper*/
-.swiper-slide{
+/* swiper */
+.swiper-slide {
   height: auto;
   padding: 4rem 1rem;
+}
+
+.swiper-pagination-bullet {
+  width: 0.75rem;
+  height: 0.75rem;
+}
+
+.swiper-pagination-bullet-active {
+  background: var(--base-color);
+}
+
+/*====  CONTACT ============================ */
+#contact .grid {
+  gap: 4rem;
+}
+
+#contact .text p {
+  margin-bottom: 2rem;
+}
+
+#contact .button i,
+#contact ul li i {
+  font-size: 1.5rem;
+  margin-right: 0.625rem;
+}
+
+#contact ul.grid {
+  gap: 2rem;
+}
+
+#contact ul li {
+  display: flex;
+  align-items: center;
+}
+
+#contact ul li i {
+  color: var(--base-color);
 }
